welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: not found: value die
    if (die==6){
        ^